<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acado_vendor</name>
  <version>0.0.0</version>
  <description>A wrapper around the ACADO toolkit</description>
  <maintainer email="whitleysoftwareservices@gmail.com">Josh Whitley</maintainer>
  <license>LGPL</license>
  <author email="christopherj.ho@gmail.com">Christopher Ho</author>
  <author email="whitleysoftwareservices@gmail.com">Josh Whitley</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
